[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = texfigure
description = Manage figures in your PythonTeX documents.
long_description = 
author = Stuart Mumford
author_email = stuart@cadair.com
license = BSD
edit_on_github = False
github_project = Cadair/texfigure
